fix(grid): add default bottom spacing

--- a/site/client/blocks/Grid/Grid.scss
+++ b/site/client/blocks/Grid/Grid.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-gap: $vertical-spacing;
     grid-template-columns: repeat(1, 1fr);
+    margin-bottom: $vertical-spacing;
 
     @media (min-width: 30rem) {
         grid-gap: $padding-x-sm;
